--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,66 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<br/>
+<div class="card">
+  <h5 class="card-header">Edit Profile</h5>
+  <div class="card-body">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field form-group">
+      <%= f.text_area :about_user, class:"form-control", placeholder:"Tell us more about you" %>
+    </div>
+    <br/>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class="field form-group">
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"form-control", placeholder:"Your name" %>
+    </div>
+
+    <div class="field form-group">
+      <br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control", placeholder:"Email Address" %>
+    </div>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <div class="field form-group">
+      <br />
+      <%= f.password_field :password, autocomplete: "new-password", class:"form-control", placeholder:"New Password" %>
+      <% if @minimum_password_length %>
+        <em><%= @minimum_password_length %> characters minimum</em>
+      <% end %>
+    </div>
+
+    <div class="field form-group">
+      <br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control", placeholder:"Confirm Password"  %>
+    </div>
+
+    <div class="field form-group">
+      <br />
+      <%= f.password_field :current_password, autocomplete: "current-password", class:"form-control", placeholder:"Current Password"  %>
+    </div>
+
+    <br/>
+
+    <div class="actions">
+      <%= f.submit "Update", class:'btn btn-secondary' %>
+    </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <br/>
+
+  <div class="card">
+    <h5 class="card-header">Cancel my account</h5>
+    <div class="card-body">
+      <h3 class="card-text">Unhappy?</h3>
+      <%= button_to "Cancel my account", registration_path(resource_name), method: :delete, class:"btn btn-danger", data: { confirm: "Are you sure?" } %></p>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<br/>
+<%= link_to "Back", :back, class:"btn btn-dark"%>
