--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
+<br/>
+<div class="card">
+  <h5 class="card-header">Sign Up</h5>
+  <div class="card-body">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field form-group">
+      <%= f.email_field :email, class:"form-control", placeholder:"Email Address", autofocus: true, autocomplete: "email" %>
+    </div>
+    <br/>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="field form-group">
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, class:"form-control", placeholder:"Password", autocomplete: "new-password" %>
+    </div>
+    <br/>
+
+    <div class="field form-group">
+      <%= f.password_field :password_confirmation, class:"form-control", placeholder:"Confrim Password", autocomplete: "new-password" %>
+    </div>
+    <br/>
+
+    <div class="field form-group">
+      <%= f.text_area :about_user, class:"form-control", placeholder:"Tell us more about you", autocomplete: "about-user" %>
+    </div>
+    <br/>
+
+    <div class="field form-group">
+      <%= f.text_field :name, class:"form-control", placeholder:"Your name", autocomplete: "name" %>
+    </div>
+    <br/>
+
+    <div class="actions">
+      <%= f.submit "Sign up", class:'btn btn-secondary' %>
+    </div>
+  <% end %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
+<br/>
 <%= render "devise/shared/links" %>
