--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,17 +11,20 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+  <div class="field form group">
+    <%= form.text_field :title, class:"form-control", placeholder:"Title" %>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
+  <div class="field form group">
+    <%= form.text_area :description, class:"form-control", placeholder:"Description" %>
   </div>
 
+  <div class="field form group">
+    <%= form.number_field :user_id, id: :project_user_id, class:"form-control", value:current_user.id, type: :hidden %>
+  </div>
+
+  <br/>
   <div>
-    <%= form.submit %>
+    <%= form.submit class:'btn btn-secondary' %>
   </div>
 <% end %>
