--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,10 +1,11 @@
 <h1>Editing project</h1>
+<br/>
 
 <%= render "form", project: @project %>
 
 <br>
 
 <div>
-  <%= link_to "Show this project", @project %> |
-  <%= link_to "Back to projects", projects_path %>
+  <%= link_to "Show this project", @project, class:"btn btn-secondary" %> |
+  <%= link_to "Back to projects", projects_path, class:"btn btn-dark" %>
 </div>
