--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,14 +1,31 @@
-<p style="color: green"><%= notice %></p>
+<p style="color: red"><%= notice %></p>
 
-<h1>Projects</h1>
+<h2>Projects</h2>
 
-<div id="projects">
-  <% @projects.each do |project| %>
-    <%= render project %>
-    <p>
-      <%= link_to "Show this project", project %>
-    </p>
-  <% end %>
-</div>
+<br/><br/>
 
-<%= link_to "New project", new_project_path %>
+<table class="table table-striped table-bordered table-hover">
+  <thead class="thead-dark">
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Made by</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @projects.each do |project| %>
+      <tr>
+        <td><%= project.title %></td>
+        <td><%= project.description %></td>
+        <td><%= @user.try(:name) %></td>
+        <td><%= link_to "Show this project", project %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<% if user_signed_in? %>
+  <%= link_to "New project", new_project_path, class:"btn btn-secondary" %>
+<% end %>
