--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,9 +1,10 @@
 <h1>New project</h1>
+<br/>
 
 <%= render "form", project: @project %>
 
 <br>
 
 <div>
-  <%= link_to "Back to projects", projects_path %>
+  <%= link_to "Back to projects", projects_path, class:"btn btn-dark" %>
 </div>
