--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,24 @@
-<p style="color: green"><%= notice %></p>
+<p style="color: red"><%= notice %></p>
 
-<%= render @project %>
-
-<div>
-  <%= link_to "Edit this project", edit_project_path(@project) %> |
-  <%= link_to "Back to projects", projects_path %>
-
-  <%= button_to "Destroy this project", @project, method: :delete %>
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="display-3">
+    <h4>About Me</h4>
+    <%= @user.try(:about_user) %>
+    <%= "-" %><%= @user.try(:name) %>
+    <br/><br/>
 </div>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title"><%= @project.title %></h5>
+    <p class="card-text" ><%= @project.description %></p>
+  </div>
+</div>
+    <br/>
+    <%= link_to "Edit this project", edit_project_path(@project), class:"btn btn-secondary" %> 
+    <%= link_to "Back to projects", projects_path, class:"btn btn-secondary" %>
+    <br/><br/>
+    <%= button_to "Destroy this project", @project, class:"btn btn-dark", method: :delete, data: { confirm: 'Are you sure?' } %>
+  </div>
+</div>
+
