--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,8 @@
   <h5 class="card-header">Edit Profile</h5>
   <div class="card-body">
 
+  <p style="color: red">To update please enter your current password as well</p>
+
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
